--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,3 +2,13 @@ app_login:
     path: /login
     controller: App\Controller\SecurityController::login
     methods: [GET, POST]
+
+app_register:
+    path: /register
+    controller: App\Controller\SecurityController::register
+    methods: [GET, POST]
+
+app_main:
+    path: /
+    controller: App\Controller\HomeController::index
+    methods: [GET]
