--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,6 +11,9 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        api:
+            pattern: ^/api/*
+            security: false
         main:
             switch_user: true
             pattern: ^/
