--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
+app_main:
+    path: /
+    controller: App\Controller\HomeController::index
+    methods: [GET]
+
 app_login:
     path: /login
     controller: App\Controller\SecurityController::login
@@ -8,7 +13,7 @@ app_register:
     controller: App\Controller\SecurityController::register
     methods: [GET, POST]
 
-app_main:
-    path: /
-    controller: App\Controller\HomeController::index
-    methods: [GET]
+api_users:
+    resource: routes/resources/api_users.yaml
+    name_prefix: api_users_
+    prefix: /api/users
